and now compleate the whole project

--- a/style.css
+++ b/style.css
@@ -2,6 +2,10 @@
     /* display: none; */
 }
 
+#cv-template{
+    display: none;
+}
+
 .myimg{
     /* border: 1px solid red; */
     border-radius: 50%;
